--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Metronic React Demo 1" />
     <link
-     
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700"
     />
     <title>Metronic Theme | Keenthemes</title>
-    <link  href="%PUBLIC_URL%/media/logos/favicon.ico" />
-    <link  id="layout-styles-anchor" href="%PUBLIC_URL%/splash-screen.css" />
+   
+  
   </head>
 
   <body id="kt_body" class="page-loading">
@@ -35,19 +35,7 @@
     <div id="root"></div>
 
     <!--begin::Loading markup-->
-    <div id="splash-screen" class="splash-screen">
-      <img
-        src="%PUBLIC_URL%/media/logos/default-dark.svg"
-        class="dark-logo"
-        alt="Metronic dark logo"
-      />
-      <img
-        src="%PUBLIC_URL%/media/logos/default.svg"
-        class="light-logo"
-        alt="Metronic light logo"
-      />
-      <span>Loading ...</span>
-    </div>
+   
     <!--end::Loading markup-->
 
     <div id="root-modals"></div>
